# demo-renovate-update-toolchains

./: .pre-commit-config.yaml  README.md  WORKSPACE
.github/: cspell.yaml  renovate.json
lib/: json.bzl
test/: BUILD.bazel
toolchains/yq/: BUILD.bazel  attachments.json  yq_toolchain.bzl
